--- a/home.html
+++ b/home.html
@@ -4,12 +4,45 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Spoiler five</title>
   </head>
   <body>
 
+    <div class="header col-12">
+        <div class="row mt-3">
+            <div class="title col-8"></div>
+            <div class="search col-2"></div>
+            <div class="config col-2"></div>
+        </div>
+    </div>
 
-    <h1>Hello, world!</h1>
+    <div class="container col-12">
+
+        <div class="row">
+            <div class="carrousel"></div>
+        </div>
+        <div class="row">
+            <div class="carrousel"></div>
+        </div>
+        <div class="row">
+            <div class="carrousel"></div>
+        </div>
+
+    </div>
+
+    <div class="footer col-12">
+        <div class="row">
+            <div class="col-3 fot"></div>
+            <div class="col-3 fot"></div>
+            <div class="col-3 fot"></div>
+            <div class="col-3 fot"></div>
+        </div>
+    </div>
+
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
