Se agrego los responsive que faltaban (biblio, explorar y notificaciones)

--- a/explorar.html
+++ b/explorar.html
@@ -9,7 +9,8 @@
   </head>
   <body>
 
-    <div class="header col-12">
+<!-- OCULTO EN MD   mobile-->
+    <div class="header col-12 d-md-none d-lg-block">
         <div class="row mt-3">
             <div class="back col-2"></div>
             <div class="title col-8"></div>
@@ -17,7 +18,7 @@
         </div>
     </div>
 
-    <div class="container col-12">
+    <div class="container col-12 d-md-none d-lg-block">
 
         <div class="row">
             <div class="carrousel"></div>
@@ -31,7 +32,7 @@
 
     </div>
 
-    <div class="footer col-12">
+    <div class="footer col-12 d-md-none d-lg-block">
         <div class="row">
             <div class="col-3 fot"></div>
             <div class="col-3 fot"></div>
@@ -39,6 +40,51 @@
             <div class="col-3 fot"></div>
         </div>
     </div>
+<!-- FIN OCULTO EN MD      mobile-->
+
+
+
+
+
+<!-- VISIBLE SOLO EN MD     desktop -->
+<div class="headerDesk col-12 d-none d-md-block d-lg-none">
+    <div class="row mt-3">
+       <div class="icoDesk col-2"></div>
+       <div class="searchDesk col-4"></div>
+       <div class="icoDesk col-2"></div>
+       <div class="icoDesk col-2"></div>
+       <div class="icoDesk col-2"></div>
+    </div>
+</div>
+
+<div class="container col-md-12 d-none d-md-block d-lg-none">
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+        </div>
+        <div class="col-md-8">
+            <div class="row carrouselExpl"></div>
+            <div class="row carrouselExpl"></div>
+            <div class="row carrouselExpl"></div>
+            <div class="row carrouselExpl"></div>
+        </div>
+    </div>
+
+</div>
+
+<div class="footer footerDesk col-md-12 d-none d-md-block d-lg-none">
+    <div class="row mt-4">
+        <div class="col-md-3 box"></div>
+        <div class="col-md-6 reproductor"></div>
+        <div class="col-md-3 box"></div>
+    </div>
+</div>
+
+<!-- FIN VISIBLE SOLO EN MD     desktop -->
+
 
 
 
