--- a/biblioteca.html
+++ b/biblioteca.html
@@ -9,14 +9,15 @@
   </head>
   <body>
 
-    <div class="header col-12">
+<!-- OCULTO EN MD   mobile-->
+    <div class="header col-12 d-md-none d-lg-block">
         <div class="row mt-3">
             <div class="title col-10"></div>
             <div class="search col-2"></div>
         </div>
     </div>
 
-    <div class="container col-12">
+    <div class="container col-12 d-md-none d-lg-block">
 
         <div class="row">
             <div class="carrousel"></div>
@@ -30,7 +31,7 @@
 
     </div>
 
-    <div class="footer col-12">
+    <div class="footer col-12 d-md-none d-lg-block">
         <div class="row">
             <div class="col-3 fot"></div>
             <div class="col-3 fot"></div>
@@ -38,6 +39,54 @@
             <div class="col-3 fot"></div>
         </div>
     </div>
+<!-- FIN OCULTO EN MD      mobile-->
+
+
+
+
+
+<!-- VISIBLE SOLO EN MD     desktop -->
+<div class="headerDesk col-12 d-none d-md-block d-lg-none">
+    <div class="row mt-3">
+       <div class="icoDesk col-2"></div>
+       <div class="searchDesk col-4"></div>
+       <div class="icoDesk col-2"></div>
+       <div class="icoDesk col-2"></div>
+       <div class="icoDesk col-2"></div>
+    </div>
+</div>
+
+<div class="container col-md-12 d-none d-md-block d-lg-none">
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+        </div>
+        <div class="col-md-8">
+            <div class="row carrouselDesk"></div>
+            <div class="row carrouselDesk"></div>
+            <div class="row carrouselDesk"></div>
+        </div>
+    </div>
+
+</div>
+
+<div class="footer footerDesk col-md-12 d-none d-md-block d-lg-none">
+    <div class="row mt-4">
+        <div class="col-md-3 box"></div>
+        <div class="col-md-6 reproductor"></div>
+        <div class="col-md-3 box"></div>
+    </div>
+</div>
+
+<!-- FIN VISIBLE SOLO EN MD     desktop -->
+
+
+
+
+
     
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
