--- a/notificaciones.html
+++ b/notificaciones.html
@@ -9,7 +9,9 @@
   </head>
   <body>
 
-    <div class="header col-12">
+<!-- OCULTO EN MD   mobile-->
+
+    <div class="header col-12 d-md-none d-lg-block">
         <div class="row mt-3">
             <div class="title col-10"></div>
             <div class="search col-2"></div>
@@ -17,7 +19,7 @@
     </div>
 
     <!-- lo rojo son todas notificaciones -->
-    <div class="container col-12">
+    <div class="container col-12 d-md-none d-lg-block">
   
         <div class="row not">
                 <div class="image col-2 mt-2"></div>
@@ -73,7 +75,7 @@
     </div>
     <!-- FIN de notificaciones -->
 
-    <div class="footer col-12">
+    <div class="footer col-12 d-md-none d-lg-block">
         <div class="row">
             <div class="col-3 fot"></div>
             <div class="col-3 fot"></div>
@@ -81,6 +83,56 @@
             <div class="col-3 fot"></div>
         </div>
     </div>
+<!-- FIN OCULTO EN MD      mobile-->
+
+
+
+<!-- VISIBLE SOLO EN MD     desktop -->
+<div class="headerDesk col-12 d-none d-md-block d-lg-none">
+    <div class="row mt-3">
+       <div class="icoDesk col-2"></div>
+       <div class="searchDesk col-4"></div>
+       <div class="icoDesk col-2"></div>
+       <div class="icoDesk col-2">
+           <div class="noti mt-4">noti</div>
+       </div>
+       <div class="icoDesk col-2"></div>
+    </div>
+</div>
+
+<div class="container col-md-12 d-none d-md-block d-lg-none">
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
+        </div>
+        <div class="col-md-8">
+            <div class="row carrouselDesk"></div>
+            <div class="row carrouselDesk"></div>
+            <div class="row carrouselDesk"></div>
+        </div>
+    </div>
+
+</div>
+
+<div class="footer footerDesk col-md-12 d-none d-md-block d-lg-none">
+    <div class="row mt-4">
+        <div class="col-md-3 box"></div>
+        <div class="col-md-6 reproductor"></div>
+        <div class="col-md-3 box"></div>
+    </div>
+</div>
+
+<!-- FIN VISIBLE SOLO EN MD     desktop -->
+
+
+
+
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
