terminada landing page home mobile

--- a/explorar.html
+++ b/explorar.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Spoiler five</title>
-  </head>
-  <body>
+</head>
 
-<!-- OCULTO EN MD   mobile-->
+<body>
+    <!-- OCULTO EN MD   mobile-->
     <div class="header col-12 d-md-none d-lg-block">
         <div class="row mt-3">
             <div class="back col-2"></div>
@@ -17,9 +19,7 @@
             <div class="search col-2"></div>
         </div>
     </div>
-
     <div class="container col-12 d-md-none d-lg-block">
-
         <div class="row">
             <div class="carrousel"></div>
         </div>
@@ -29,9 +29,7 @@
         <div class="row">
             <div class="carrousel"></div>
         </div>
-
     </div>
-
     <div class="footer col-12 d-md-none d-lg-block">
         <div class="row">
             <div class="col-3 fot"></div>
@@ -40,62 +38,50 @@
             <div class="col-3 fot"></div>
         </div>
     </div>
-<!-- FIN OCULTO EN MD      mobile-->
+    <!-- FIN OCULTO EN MD      mobile-->
 
-
-
-
-
-<!-- VISIBLE SOLO EN MD     desktop -->
-<div class="headerDesk col-12 d-none d-md-block d-lg-none">
-    <div class="row mt-3">
-       <div class="icoDesk col-2"></div>
-       <div class="searchDesk col-4"></div>
-       <div class="icoDesk col-2"></div>
-       <div class="icoDesk col-2"></div>
-       <div class="icoDesk col-2"></div>
-    </div>
-</div>
-
-<div class="container col-md-12 d-none d-md-block d-lg-none">
-
-    <div class="row">
-        <div class="col-md-4">
-            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
-            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
-            <div class="row navs"><div class="btnNav col-md-12 align-self-center"></div></div>
-        </div>
-        <div class="col-md-8">
-            <div class="row carrouselExpl"></div>
-            <div class="row carrouselExpl"></div>
-            <div class="row carrouselExpl"></div>
-            <div class="row carrouselExpl"></div>
+    <!-- VISIBLE SOLO EN MD     desktop -->
+    <div class="headerDesk col-12 d-none d-md-block d-lg-none">
+        <div class="row mt-3">
+            <div class="icoDesk col-2"></div>
+            <div class="searchDesk col-4"></div>
+            <div class="icoDesk col-2"></div>
+            <div class="icoDesk col-2"></div>
+            <div class="icoDesk col-2"></div>
         </div>
     </div>
-
-</div>
-
-<div class="footer footerDesk col-md-12 d-none d-md-block d-lg-none">
-    <div class="row mt-4">
-        <div class="col-md-3 box"></div>
-        <div class="col-md-6 reproductor"></div>
-        <div class="col-md-3 box"></div>
+    <div class="container col-md-12 d-none d-md-block d-lg-none">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="row navs">
+                    <div class="btnNav col-md-12 align-self-center"></div>
+                </div>
+                <div class="row navs">
+                    <div class="btnNav col-md-12 align-self-center"></div>
+                </div>
+                <div class="row navs">
+                    <div class="btnNav col-md-12 align-self-center"></div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="row carrouselExpl"></div>
+                <div class="row carrouselExpl"></div>
+                <div class="row carrouselExpl"></div>
+                <div class="row carrouselExpl"></div>
+            </div>
+        </div>
     </div>
-</div>
-
-<!-- FIN VISIBLE SOLO EN MD     desktop -->
-
-
-
-
-
-
-
-
-
-
+    <div class="footer footerDesk col-md-12 d-none d-md-block d-lg-none">
+        <div class="row mt-4">
+            <div class="col-md-3 box"></div>
+            <div class="col-md-6 reproductor"></div>
+            <div class="col-md-3 box"></div>
+        </div>
+    </div>
+    <!-- FIN VISIBLE SOLO EN MD     desktop -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
 </html>
