ajustes de width and height en img carrousel

--- a/home.html
+++ b/home.html
@@ -117,25 +117,25 @@
                         <!--  CARRUSEL 1-->
                         <div class="row card-deck mt-1">
                             <div class="card col-3">
-                                <img src="img/fiesta.jpg" width="80%" height="50%">
-                                    <h5 class="card-title mt-1 c-white2">Fiesta! Fiesta!</h5>
+                                <img src="img/fiesta.jpg" width="100%" height="45%">
+                                    <h5 class="card-title mt-1 c-white">Fiesta! Fiesta!</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/ìconos-del-Rock-Argentino.jpg" width="80%" height="50%">
+                                <img src="img/ìconos-del-Rock-Argentino.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Rock Argentino</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/this_paulo.jpg" width="80%" height="50%">
+                                <img src="img/this_paulo.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Paulo Londra</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/hits_urbanos.jpg" width="80%" height="50%">
+                                <img src="img/hits_urbanos.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Hits Urbanos</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
@@ -147,25 +147,25 @@
                     <div class="carousel-item" data-interval="20000">
                         <div class="row card-deck mt-1">
                             <div class="card col-3">
-                                <img src="img/fiesta.jpg" width="80%" height="50%">
+                                <img src="img/fiesta.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">De fiesta</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
                             
                             <div class="card col-3">
-                                <img src="img/ìconos-del-Rock-Argentino.jpg" width="80%" height="50%">
+                                <img src="img/ìconos-del-Rock-Argentino.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Rock Argentino</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/this_paulo.jpg" width="80%" height="50%">
+                                <img src="img/this_paulo.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Paulo Londra</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/hits_urbanos.jpg" width="80%" height="50%">
+                                <img src="img/hits_urbanos.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Hits Urbanos</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
@@ -177,25 +177,25 @@
                     <div class="carousel-item" data-interval="20000"> 
                         <div class="row card-deck mt-1">
                             <div class="card col-3">
-                                <img src="img/fiesta.jpg" width="80%" height="50%">
+                                <img src="img/fiesta.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">De fiesta</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
                             
                             <div class="card col-3">
-                                <img src="img/ìconos-del-Rock-Argentino.jpg" width="80%" height="50%">
+                                <img src="img/ìconos-del-Rock-Argentino.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Rock Argentino</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/this_paulo.jpg" width="80%" height="50%">
+                                <img src="img/this_paulo.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Paulo Londra</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
 
                             <div class="card col-3">
-                                <img src="img/hits_urbanos.jpg" width="80%" height="50%">
+                                <img src="img/hits_urbanos.jpg" width="100%" height="45%">
                                     <h5 class="card-title mt-1 c-white">Hits Urbanos</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>           
