--- a/index.html
+++ b/index.html
@@ -40,23 +40,9 @@
     <main>
         <div class="container-fluid landing-main">
             <!-- Desktop Start-->
-            <div class="row d-none full-height">
-                <div class="d-none col-sm-5 d-sm-block full-height">
-                    <div class="d-sm-flex justify-content-center align-items-center full-height">
-                        <img src="./img/hero.png" id="hero-logo" alt="">
-                    </div>
-                </div>
-                <div class="d-none col-sm-7 d-sm-block">
-                    <div class="landing-description-container d-flex justify-content-center align-items-center">
-                        <h2 class="landing-description">
-                            Lleva tu música a todas
-                            partes del mundo.
-                            <br>
-                            Calidad y confianza 
-                            asegurada.
-                        </h2>
-                    </div>
-                </div>
+            <div class="row d-none d-sm-flex full-height">
+                <div class="col-md-5">a</div>
+                <div class="col-md-7">a</div>
             </div>
             <!-- Desktop end-->
             <!-- Mobile start -->
