--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
                <!-- <div class="col-2"> -->
                 <div class="user-container">
                     <img src="img/usuario.png" alt="perfil" height="27px" >
-                    <p class="p-user">John86</p>
+                    <span class="p-user">John86</span>
                 </div>
                <!-- </div> -->
                <img class="ml-4 mr-4"src="img/campana.png" alt="notificaciones" height="40%">
