--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
 
 <!-- OCULTO SOLO EN XS     desktop -->
     <div class="headerDesk col-12 d-none d-sm-block">
-        <div class="row">
+        <div class="row h-100">
            <div class="col-2 d-sm-flex align-items-center">
                <img src="img/spoilerfive-logo.png" alt="spoiler-five" width="20%" height="60%">
             </div>
@@ -56,7 +56,7 @@
            </div>
            <div class="col-4 text-center d-sm-flex align-items-center justify-content-end pl-2"> 
                <!-- <div class="col-2"> -->
-                <div class="user-container">
+                <div class="user-container mb-2">
                     <img src="img/usuario.png" alt="perfil" height="27px" >
                     <span class="p-user">John86</span>
                 </div>
