--- a/index.html
+++ b/index.html
@@ -41,8 +41,42 @@
         <div class="container-fluid landing-main">
             <!-- Desktop Start-->
             <div class="row d-none d-sm-flex full-height">
-                <div class="col-md-5">a</div>
-                <div class="col-md-7">a</div>
+                <div class="col-md-5 h-100">
+                    <div class=" h-100 d-flex justify-content-center align-items-center">
+                        <img id="hero-logo" src="./img/hero.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <div class="row landing-description-row-desk">
+                        <div class="col-sm-12 d-sm-flex justify-content-start align-items-end">
+                            <h2 class="landing-description-desk">
+                                Lleva tu música contigo,
+                                <br>
+                                vayas a donde vayas, 
+                                <br>
+                                Calidad y confianza 
+                                asegurada.
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="row landing-demo-button-row-desk pt-5">
+                        <div class="col-sm-6 d-sm-flex justify-content-start align-items-start">
+                            <button type="button" class="btn access-button">
+                                INICIAR PRUEBA
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row landing-demo-text-row-desk">
+                        <div class="col-sm-6 d-sm-flex justify-content-start align-items-start">
+                            <p class="demo-text-desktop">
+                                Conoce nuestra app, si deseas más, 
+                                puedes mejorar tu plan
+                                <br>
+                                en cualquier momento
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- Desktop end-->
             <!-- Mobile start -->
@@ -57,8 +91,9 @@
                 <div class="col-10 offset-1 d-sm-none">
                     <div class="landing-description-container d-flex justify-content-center align-items-center">
                         <h2 class="landing-description">
-                            Lleva tu música a todas
-                            partes del mundo.
+                            Lleva tu música contigo,
+                            <br>
+                            vayas a donde vayas, 
                             <br>
                             Calidad y confianza 
                             asegurada.
@@ -95,6 +130,7 @@
     <footer>
         <div class="container-fluid landing-footer">
             <div class="row">
+                <!-- Mobile start -->
                 <div class="col d-sm-none d-flex justify-content-center align-items-center">
                     <button type="button" class="btn access-button">
                         INICIAR SESIÓN
@@ -105,6 +141,20 @@
                         REGISTRARSE
                     </button>
                 </div>
+                <!-- Mobile end -->
+                <!-- Desktop start -->
+                <div class="col-sm-4 d-none col-sm-4 d-sm-flex align-items-center">
+                    <img src="./img/spoilerfive-logo.png" class="spoiler-logo" alt="">
+                </div>
+                <div class="d-none col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <p class="follow-us-text">Seguinos en las redes</p>
+                </div>
+                <div class="d-none col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./img/facebook.png" class="spoiler-logo mr-5" alt="">
+                    <img src="./img/ico_insta.png" class="spoiler-logo mr-5" alt="">
+                    <img src="./img/twitter.png" class="spoiler-logo " alt="">
+                </div>
+                <!-- Desktop end -->
             </div>
         </div>
     </footer>
