terminado login en desktop y mobile

--- a/index.html
+++ b/index.html
@@ -23,14 +23,22 @@
                 <div class="d-none col-sm-4 d-sm-block">
                     <div class="row full-height">
                         <div class="col-sm-6 d-sm-flex align-items-center">
-                            <button type="button" class="btn access-button">
-                                INICIAR SESIÓN
-                            </button>
+                            <div class="w-100">
+                                <a href="login.html">
+                                    <button type="button" style="width: 100%;" class="btn access-button">
+                                        INICIAR SESIÓN
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                         <div class="col-sm-6 d-sm-flex align-items-center">
-                            <button type="button" class="btn access-button">
-                                REGISTRARSE
-                            </button>
+                            <div class="w-100">
+                                <a href="sign-up.html">
+                                    <button type="button" style="width: 100%;" class="btn access-button">
+                                        REGISTRARSE
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -61,9 +69,13 @@
                     </div>
                     <div class="row landing-demo-button-row-desk pt-5">
                         <div class="col-sm-6 d-sm-flex justify-content-start align-items-start">
-                            <button type="button" class="btn access-button">
-                                INICIAR PRUEBA
-                            </button>
+                            <div class="w-100">
+                                <a href="home.html">
+                                    <button type="button" style="width: 100%;" class="btn access-button">
+                                        INICIAR PRUEBA
+                                    </button>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="row landing-demo-text-row-desk">
@@ -106,9 +118,13 @@
                     <div class="demo-test-container">
                         <div class="row demo-button-container">
                             <div class="col-8 offset-2 d-flex justify-content-center align-items-end">
-                                <button type="button" class="btn access-button">
-                                    INICIAR PRUEBA
-                                </button>
+                                <div class="w-100">
+                                    <a href="home.html">
+                                        <button type="button" style="width: 100%;" class="btn access-button">
+                                            INICIAR PRUEBA
+                                        </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="row demo-text-container mt-2">
@@ -132,14 +148,22 @@
             <div class="row">
                 <!-- Mobile start -->
                 <div class="col d-sm-none d-flex justify-content-center align-items-center">
-                    <button type="button" class="btn access-button">
-                        INICIAR SESIÓN
-                    </button>
+                    <div class="w-100">
+                        <a href="login.html">
+                            <button type="button" style="width: 100%;" class="btn access-button">
+                                INICIAR SESIÓN
+                            </button>
+                        </a>
+                    </div>
                 </div>
                 <div class="col d-sm-none  d-flex justify-content-center align-items-center">
-                    <button type="button" class="btn access-button">
-                        REGISTRARSE
-                    </button>
+                    <div class="w-100">
+                        <a href="sign-up.html">
+                            <button type="button" style="width: 100%;" class="btn access-button">
+                                REGISTRARSE
+                            </button>
+                        </a>
+                    </div>
                 </div>
                 <!-- Mobile end -->
                 <!-- Desktop start -->
