Se agrego carpeta html y se ordeno

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -6,15 +6,15 @@
     <title>Spoiler Five</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
         <div class="container-fluid landing-header">
             <div class="row full-height">
                 <div class="d-none col-sm-4 d-sm-flex align-items-center">
-                    <img src="./img/spoilerfive-logo.png" class="spoiler-logo" alt="">
+                    <img src="../img/spoilerfive-logo.png" class="spoiler-logo" alt="">
                 </div>
                 <div class="col-12 col-sm-4 align-full-center">
                     <h1 class="landing-title">
@@ -34,7 +34,7 @@
                 <div class="col-12 offset-sm-4 col-sm-4 ">
                     <div class="login-form-container">
                         <div class="login-title-container">
-                            <h2>INICIAR SESION</h2>
+                            <h2>REGISTRARSE</h2>
                         </div>
                         <div class="form-items-container d-flex justify-content-start">
                             <div class="input-container">
@@ -60,22 +60,16 @@
                                 </label>
                             </div>
                             <div  class="input-container col-sm-8 offset-md-2" >
-                                <div class="w-100">
-                                    <a href="home.html">
-                                        <button type="button" style="width: 100%;" class="btn access-button">
-                                            INICIAR SESION
-                                        </button>
-                                    </a>
-                                </div>
+                                <button type="button" class="btn access-button">
+                                    INICIAR SESIÓN
+                                </button>
                             </div>
                             <div class="d-none d-sm-flex col-sm-4 offset-md-4 mt-3">
-                                <div class="w-100">
-                                    <a href="index.html">
-                                        <button type="button" style="width: 100%;" class="btn access-button">
-                                            VOLVER
-                                        </button>
-                                    </a>
-                                </div>
+                                <a href="../index.html">
+                                <button type="button" class="btn access-button">
+                                    VOLVER
+                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -89,24 +83,24 @@
             <div class="row">
                 <!-- Mobile start -->
                 <div class="col-5 d-sm-none d-flex justify-content-center align-items-center">
-                    <a href="index.html">
-                        <button type="button" style="width: 100%;" class="btn access-button">
-                            VOLVER
-                        </button>
+                    <a href="../index.html">
+                    <button type="button" class="btn access-button">
+                        VOLVER
+                    </button>
                     </a>
                 </div>
                 <!-- Mobile end -->
                 <!-- Desktop start -->
                 <div class="col-sm-4 d-none col-sm-4 d-sm-flex align-items-center">
-                    <img src="./img/spoilerfive-logo.png" class="spoiler-logo" alt="">
+                    <img src="../img/spoilerfive-logo.png" class="spoiler-logo" alt="">
                 </div>
                 <div class="d-none col-sm-4 d-sm-flex justify-content-center align-items-center">
                     <p class="follow-us-text">Seguinos en las redes</p>
                 </div>
                 <div class="d-none col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./img/facebook.png" class="spoiler-logo mr-5" alt="">
-                    <img src="./img/ico_insta.png" class="spoiler-logo mr-5" alt="">
-                    <img src="./img/twitter.png" class="spoiler-logo " alt="">
+                    <img src="../img/facebook.png" class="spoiler-logo mr-5" alt="">
+                    <img src="../img/ico_insta.png" class="spoiler-logo mr-5" alt="">
+                    <img src="../img/twitter.png" class="spoiler-logo " alt="">
                 </div>
                 <!-- Desktop end -->
             </div>
