--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="row full-height">
                         <div class="col-sm-6 d-sm-flex align-items-center">
                             <div class="w-100">
-                                <a href="login.html">
+                                <a href="html/login.html">
                                     <button type="button" style="width: 100%;" class="btn access-button">
                                         INICIAR SESIÓN
                                     </button>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="col-sm-6 d-sm-flex align-items-center">
                             <div class="w-100">
-                                <a href="sign-up.html">
+                                <a href="html/sign-up.html">
                                     <button type="button" style="width: 100%;" class="btn access-button">
                                         REGISTRARSE
                                     </button>
@@ -51,7 +51,7 @@
             <div class="row d-none d-sm-flex full-height">
                 <div class="col-md-5 h-100">
                     <div class=" h-100 d-flex justify-content-center align-items-center">
-                        <img id="hero-logo" src="./img/hero.png" alt="">
+                        <img id="hero-logo" src="img/hero.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-7">
@@ -70,7 +70,7 @@
                     <div class="row landing-demo-button-row-desk pt-5">
                         <div class="col-sm-6 d-sm-flex justify-content-start align-items-start">
                             <div class="w-100">
-                                <a href="home.html">
+                                <a href="html/home.html">
                                     <button type="button" style="width: 100%;" class="btn access-button">
                                         INICIAR PRUEBA
                                     </button>
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-6 offset-3 d-sm-none" >
                     <div class="hero-image-container d-flex justify-content-center align-items-center">
-                        <img id="hero-logo" src="./img/hero.png" alt="">
+                        <img id="hero-logo" src="img/hero.png" alt="">
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                         <div class="row demo-button-container">
                             <div class="col-8 offset-2 d-flex justify-content-center align-items-end">
                                 <div class="w-100">
-                                    <a href="home.html">
+                                    <a href="html/home.html">
                                         <button type="button" style="width: 100%;" class="btn access-button">
                                             INICIAR PRUEBA
                                         </button>
@@ -149,7 +149,7 @@
                 <!-- Mobile start -->
                 <div class="col d-sm-none d-flex justify-content-center align-items-center">
                     <div class="w-100">
-                        <a href="login.html">
+                        <a href="html/login.html">
                             <button type="button" style="width: 100%;" class="btn access-button">
                                 INICIAR SESIÓN
                             </button>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col d-sm-none  d-flex justify-content-center align-items-center">
                     <div class="w-100">
-                        <a href="sign-up.html">
+                        <a href="html/sign-up.html">
                             <button type="button" style="width: 100%;" class="btn access-button">
                                 REGISTRARSE
                             </button>
@@ -168,15 +168,15 @@
                 <!-- Mobile end -->
                 <!-- Desktop start -->
                 <div class="col-sm-4 d-none col-sm-4 d-sm-flex align-items-center">
-                    <img src="./img/spoilerfive-logo.png" class="spoiler-logo" alt="">
+                    <img src="img/spoilerfive-logo.png" class="spoiler-logo" alt="">
                 </div>
                 <div class="d-none col-sm-4 d-sm-flex justify-content-center align-items-center">
                     <p class="follow-us-text">Seguinos en las redes</p>
                 </div>
                 <div class="d-none col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./img/facebook.png" class="spoiler-logo mr-5" alt="">
-                    <img src="./img/ico_insta.png" class="spoiler-logo mr-5" alt="">
-                    <img src="./img/twitter.png" class="spoiler-logo " alt="">
+                    <img src="img/facebook.png" class="spoiler-logo mr-5" alt="">
+                    <img src="img/ico_insta.png" class="spoiler-logo mr-5" alt="">
+                    <img src="img/twitter.png" class="spoiler-logo " alt="">
                 </div>
                 <!-- Desktop end -->
             </div>
