Se agrego explorar

--- a/html/home.html
+++ b/html/home.html
@@ -76,21 +76,21 @@
 
                 <div class="row navs"> 
                     <div class="col-12 text-center mt-4">
-                        <a href="html/home.html"><img src="../img/casa.png" width="20%" height="30%"></a>
+                        <a href="home.html"><img src="../img/casa.png" width="20%" height="30%"></a>
                         <h6 class="c-lBlue">HOME</h6>
                     </div>
                 </div>
 
                 <div class="row navs c-ico">
                     <div class="col-12 text-center mt-4 fixed">
-                        <a href="html/explorar.html"><img src="../img/explorar_gris.png" width="20%" height="30%"></a>
+                        <a href="explorar.html"><img src="../img/explorar_gris.png" width="20%" height="30%"></a>
                         <h6>EXPLORAR</h6> 
                     </div>  
                 </div>
 
                 <div class="row navs c-ico">
                     <div class="col-12 text-center mt-4 fixed">
-                        <a href="html/biblioteca.html"><img src="../img/libro.png" width="20%" height="30%"></a>
+                        <a href="biblioteca.html"><img src="../img/libro.png" width="20%" height="30%"></a>
                         <h6>MI BIBLIOTECA</h6> 
                     </div>  
                 </div>
