--- a/html/explorar.html
+++ b/html/explorar.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <!-- OCULTO SOLO EN XS   mobile-->
+
+         <!-- VISIBLE SOLO EN XS   mobile-->    
     <div class="header col-12 d-block d-sm-none">
         <div class="row mt-3">
             <div class="back col-2"></div>
@@ -254,7 +255,7 @@
 
                         <div class="card col-2">
                             <div class="img-fondo">
-                                <img class="mt-3" src="../img/jazz (1).png" width="40%" height="70%">
+                                <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                             </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                         </div>
@@ -296,7 +297,7 @@
 
                         <div class="card col-2">
                             <div class="img-fondo">
-                                <img class="mt-3" src="../img/jazz (1).png" width="40%" height="70%">
+                                <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                             </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                         </div>
@@ -338,7 +339,7 @@
 
                         <div class="card col-2">
                             <div class="img-fondo">
-                                <img class="mt-3" src="../img/jazz (1).png" width="40%" height="70%">
+                                <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                             </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                         </div>
@@ -380,7 +381,7 @@
 
                         <div class="card col-2">
                             <div class="img-fondo">
-                                <img class="mt-3" src="../img/jazz (1).png" width="40%" height="70%">
+                                <img class="mt-3" src="../img/jazz.png" width="40%" height="70%">
                             </div>
                                 <h5 class="card-title mt-1 ml-4 c-white text-center">JAZZ</h5>
                         </div>
@@ -468,7 +469,6 @@
 
 
 
-<script src="../js/home.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
