--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -100,61 +100,43 @@
                     </div>
                     <div class="col-3 d-flex justify-content-end">
                         <button class="btn-filtrar mt-2 position-absolute" id="btnFiltrar"><img id="imgFiltro" src="../img/filtrar_gris.png"></button>
-                            <div id="filtro" class="filtrar">
+                        <div id="filtro" class="filtrar">
                             <div class="col-12"> <h5 class="c-white mt-2">FILTRAR</h5></div>
                             <div class="col-12"> <p class="mb-0 c-white text-left">POR FECHA</p></div>
-                            <div class="row d-flex justify-content-center mt-1">
-                                <div class="col-4 text-left">
-                                    <div class="btn-group ml-1">
-                                        <button class="w-60 ml-2 btn-drop btn-sm dropdown-toggle" id="drop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          Mayor a
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">Mayor a</a>
-                                            <a class="dropdown-item" href="#">Menor a</a>
-                                        </div>
-                                    </div>
+                            <div class="row mt-1 pl-2 pr-4 d-flex justify-content-around">
+                                <div class="col-4">
+                                        <select class="w-mm btn-drop btn-sm" name="select">
+                                            <option value="menor">Mayor a</option> 
+                                            <option value="mayor" selected>Menor a</option>
+                                        </select>
                                 </div>
                                 
-                                <div class="col-4 text-center">
-                                    <div class="btn-group">
-                                        <button class="w-20 btn-drop btn-sm dropdown-toggle" id="drop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                         Año
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">Mayor a</a>
-                                        </div>
-                                      </div>
+                                <div class="col-4">
+                                    <!-- <div class="ml-1"> -->
+                                    
+                                        <input class="w-year btn-drop btn-sm border-0 ml-1" type="number" placeholder="Año">
+                                        <!-- </div> -->
                                 </div>
 
                                 <div class="col-4">
-                                    <div class="btn-group mr-5">
-                                        <button class="w-20 btn-drop btn-sm dropdown-toggle" id="drop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                         Mes
-                                        </button>
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">Mayor a</a>
-                                        </div>
-                                      </div>
+                                        <input class="w-month btn-drop btn-sm border-0" type="month" placeholder="Mes">
                                 </div>
-                            </div>
-                            <div class="col-12"> <p class="c-white text-left mb-0">POR CATEGORIA</p></div>
-                            <div class="col-12 text-center mt-1">
-                                    <button class="w-100 btn-drop btn-sm dropdown-toggle" id="drop" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Seleccione categoria</button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Cumbia</a>
-                                        <a class="dropdown-item" href="#">Regueton</a>
-                                        <a class="dropdown-item" href="#">Pop</a>
-                                        <a class="dropdown-item" href="#">Salsa</a>
-                                        <a class="dropdown-item" href="#">Lentos</a>
+                        </div>
 
-                                    </div>
+                            <div class="col-12"> <p class="c-white text-left mb-0">POR CATEGORIA</p></div>
+
+                            <div class="col-12 text-center mt-1">
+                                        <select class="w-100 btn-drop btn-sm" name="select">
+                                            <option value="cumbia">Cumbia</option> 
+                                            <option value="value2" selected>Regueton</option>
+                                            <option value="value3">Pop</option>
+                                        </select>
                             </div>
+
                             <div class="col-12">
-                                <button class="btn-aplicar bg-lblue b-r w-100 mt-3">APLICAR FILTROS</button>
+                                <button class="btn-aplicar bg-lblue b-r w-100 mt-3 btn-sm border-0">APLICAR FILTROS</button>
                             </div>
-                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- CARROUSEL 1 (Lo ultimo) -->
